# backend-content-manage

./: .gitignore  Cargo.toml  README.md
migrations/: 001_create_user.sql
src/: database.rs  errors.rs  main.rs  middleware.rs  models.rs  validation.rs
src/handlers/: address_handler.rs  contact_handler.rs  health_handler.rs  mod.rs  user_handler.rs
src/migrations/: 002_create_contacts.sql  003_create_addresses.sql
src/services/: address_service.rs  contact_service.rs  mod.rs  user_service.rs
